--- a/configs/envs/production.loc.env
+++ b/configs/envs/production.loc.env
@@ -3,11 +3,4 @@ ENV_NAME=local
 LOG_LEVEL=info
 NODE_ENV=production
 
-SVC_PORT=9000
-SVC_DEBUG_PORT=9001
-SVC_MOUNT_POINT=/api
-
-MONGO_PORT=9002
-MONGO_DB=auth
-
-WA_BASE_URL=http://svc-auth-loc.dev.me
+SERVE_PORT=8000
