--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "olho-com",
   "version": "0.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "src/index.tsx",
   "scripts": {
-    "start": "npm run docker:up:loc",
     "prebuild": "npm run clean:dist",
     "build": "bash scripts/build.sh",
     "build:analyze": "cross-env-shell BUILD_ANALYZE=true bash ./scripts/build.sh",
@@ -13,8 +12,11 @@
     "cm": "npx git-cz",
     "check:all": "run-p lint types:check",
     "clean:dist": "rm -rf dist/static",
+    "launch:loc": "run-p launch:dev-server types:watch",
+    "launch:dev-server": "bash ./scripts/launch.dev-server.sh",
     "lint": "npx eslint src --config ./configs/eslint.config.js  --ext .ts,.tsx,.json --ignore-pattern '/node_modules/*' --ignore-pattern '**/*.d.ts' --ignore-pattern '**/*.spec.ts' --ignore-pattern '/src/assets/**'",
     "lint:fix": "npm run lint --fix",
+    "start": "npm run launch:loc",
     "types:check": "tsc -p tsconfig.json",
     "types:watch": "npm run types:check -- --watch",
     "watch": "run-p types:watch watch:loc",
@@ -52,27 +54,38 @@
     "compression-webpack-plugin": "^3.1.0",
     "copy-webpack-plugin": "5.1.1",
     "cross-env": "7.0.0",
-    "cz-conventional-changelog": "3.0.2",
+    "css-loader": "3.4.2",
+    "cssnano": "4.1.10",
+    "cz-conventional-changelog": "3.1.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.0.0",
-    "eslint-config-prettier": "^6.9.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-json": "2.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-node": "11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "handlebars": "^4.7.2",
     "husky": "4.2.1",
     "lodash-webpack-plugin": "^0.11.5",
+    "postcss-import": "12.0.1",
+    "postcss-loader": "3.0.0",
+    "postcss-preset-env": "6.7.0",
     "prettier": "1.19.1",
-    "rimraf": "3.0.0",
+    "rimraf": "3.0.1",
     "source-map-loader": "0.2.4",
     "ts-loader": "6.2.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "style-loader": "1.1.3",
+    "sugarss": "2.0.0",
+    "svg-inline-loader": "0.8.0",
+    "to-string-loader": "1.1.6",
     "typescript": "3.7.5",
     "webpack": "4.41.5",
     "webpack-bundle-analyzer": "3.6.0",
     "webpack-cli": "3.3.10",
+    "webpack-dev-server": "3.10.1",
     "webpack-merge": "4.2.2"
   },
   "engines": {
