--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "launch:loc": "run-p launch:dev-server types:watch",
     "launch:dev-server": "bash ./scripts/launch.dev-server.sh",
     "lint": "npx eslint src --config ./configs/eslint.config.js  --ext .ts,.tsx,.json --ignore-pattern '/node_modules/*' --ignore-pattern '**/*.d.ts' --ignore-pattern '**/*.spec.ts' --ignore-pattern '/src/assets/**'",
-    "lint:fix": "npm run lint --fix",
+    "lint:fix": "npm run lint -- --fix",
     "start": "npm run launch:loc",
     "types:check": "tsc -p tsconfig.json",
     "types:watch": "npm run types:check -- --watch",
@@ -36,23 +36,28 @@
   "author": "Oleksii Honchar",
   "license": "MIT",
   "dependencies": {
-    "@hapi/joi": "17.1.0",
+    "@ciklum/logan": "^0.4.10",
     "env-cmd": "10.0.1",
-    "faker": "4.1.0",
-    "lodash": "4.17.15",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "react-bootstrap": "^1.0.0-beta.16"
   },
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
+    "@hapi/joi": "17.1.0",
     "@types/hapi__joi": "16.0.8",
     "@types/lodash": "4.14.149",
-    "@types/uuid": "3.4.6",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@types/uuid": "3.4.7",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
+    "bootstrap": "4.4.1",
+    "classnames": "2.2.6",
     "commitizen": "4.0.3",
     "compression-webpack-plugin": "^3.1.0",
     "copy-webpack-plugin": "5.1.1",
+    "core-js": "3",
     "cross-env": "7.0.0",
     "css-loader": "3.4.2",
     "cssnano": "4.1.10",
@@ -66,21 +71,26 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-node": "11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "7.18.0",
+    "eslint-plugin-react-hooks": "2.3.0",
     "handlebars": "^4.7.2",
     "husky": "4.2.1",
+    "lodash": "4.17.15",
     "lodash-webpack-plugin": "^0.11.5",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.7.0",
     "prettier": "1.19.1",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "rimraf": "3.0.1",
     "source-map-loader": "0.2.4",
-    "ts-loader": "6.2.1",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "style-loader": "1.1.3",
     "sugarss": "2.0.0",
     "svg-inline-loader": "0.8.0",
     "to-string-loader": "1.1.6",
+    "ts-loader": "6.2.1",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "3.7.5",
     "webpack": "4.41.5",
     "webpack-bundle-analyzer": "3.6.0",
