--- a/configs/tsconfig.json
+++ b/configs/tsconfig.json
@@ -1,37 +1,34 @@
 {
   "compilerOptions": {
-    "allowJs": false, // Allow JavaScript files to be compiled.
-    "allowSyntheticDefaultImports": true, // Allow default imports from modules with no default export. This does not affect code emit, just typechecking.
+    "allowJs": false,
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "..",
-    "declaration": true, // Generates corresponding '.d.ts' file
-    "diagnostics": false, // Show diagnostic information
-    "emitDecoratorMetadata": true, // Enables experimental support for emitting type metadata for decorators.
-    "experimentalDecorators": true, // Enables experimental support for ES7 decorators
-    "resolveJsonModule": true, // Include modules imported with .json extension.
+    "declaration": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "resolveJsonModule": false,
     "incremental": true,
-    "importHelpers": true, // Import emit helpers from 'tslib'
-    "isolatedModules": false, // Transpile each file as a separate module (similar to 'ts.transpileModule')
+    "importHelpers": true,
     "jsx": "react",
     "lib": [
       "dom",
-      "esnext" // This allows you to use the latest JavaScript language features
+      "esnext"
     ],
-    "module": "commonjs",
+    "module": "es6",
+    "moduleResolution": "node",
     "newLine": "lf",
-    "noEmit": true, // Do not emit outputs
+    "noEmit": true,
     "noImplicitAny": true,
-    "noLib": false, // Do not include the default library file (lib.d.ts).
-    "noStrictGenericChecks": true, // Disable strict checking of generic signatures in function types.
+    "noStrictGenericChecks": true,
     "paths": {
       "src/*": [ "src/*" ]
     },
     "plugins": [{ "name": "typescript-plugin-css-modules" }],
-    "removeComments": true, // Do not emit comments to output
-    "skipLibCheck": false, // Skip type checking of all declaration files (*.d.ts).
+    "removeComments": true,
     "sourceMap": true,
-    "strict": true, // Enable all strict type-checking options
+    "strict": true,
     "suppressImplicitAnyIndexErrors": true,
-    "target": "esnext",
+    "target": "es5",
     "typeRoots": [ // relative to package.json path
       "../node_modules/@types",
       "../src/typings"
@@ -42,6 +39,7 @@
   ],
   "exclude": [ // relative to ./configs/tsconfig.json
     "../node_modules",
+    "../configs",
     "../dist",
     "../docs",
     "../coverage",
