feat(icons): add fa with react & typescript support

--- a/package.json
+++ b/package.json
@@ -37,11 +37,18 @@
   "license": "MIT",
   "dependencies": {
     "@ciklum/logan": "0.4.10",
+    "@emotion/core": "10.0.27",
+    "@emotion/styled": "10.0.27",
+    "@fortawesome/fontawesome-svg-core": "1.2.26",
+    "@fortawesome/free-brands-svg-icons": "5.12.0",
+    "@fortawesome/free-solid-svg-icons": "5.12.0",
+    "@fortawesome/react-fontawesome": "0.1.8",
     "env-cmd": "10.0.1",
     "moment": "2.24.0",
     "npm-run-all": "4.1.5",
     "prop-types": "15.7.2",
-    "typescript-plugin-css-modules": "^2.1.2"
+    "react-bootstrap": "1.0.0-beta.16",
+    "typescript-plugin-css-modules": "2.1.2"
   },
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
@@ -49,7 +56,7 @@
     "@hapi/joi": "17.1.0",
     "@types/hapi__joi": "16.0.8",
     "@types/lodash": "4.14.149",
-    "@types/prop-types": "^15.7.3",
+    "@types/prop-types": "15.7.3",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
     "@types/uuid": "3.4.7",
@@ -66,7 +73,7 @@
     "cz-conventional-changelog": "3.1.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.0.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "6.10.0",
     "eslint-import-resolver-typescript": "2.0.0",
     "eslint-plugin-import": "2.20.0",
     "eslint-plugin-json": "2.0.1",
@@ -75,7 +82,7 @@
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.18.0",
     "eslint-plugin-react-hooks": "2.3.0",
-    "file-loader": "^5.0.2",
+    "file-loader": "5.0.2",
     "handlebars": "4.7.2",
     "husky": "4.2.1",
     "lodash": "4.17.15",
@@ -95,7 +102,7 @@
     "ts-loader": "6.2.1",
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "typescript": "3.7.5",
-    "typings-for-css-modules-loader": "^1.7.0",
+    "typings-for-css-modules-loader": "1.7.0",
     "webpack": "4.41.5",
     "webpack-bundle-analyzer": "3.6.0",
     "webpack-cli": "3.3.10",
