--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@fortawesome/free-brands-svg-icons": "5.12.0",
     "@fortawesome/free-solid-svg-icons": "5.12.0",
     "@fortawesome/react-fontawesome": "0.1.8",
+    "color": "3.1.2",
+    "emotion-theming": "10.0.27",
     "env-cmd": "10.0.1",
     "moment": "2.24.0",
     "npm-run-all": "4.1.5",
@@ -53,6 +55,7 @@
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
     "@hapi/joi": "17.1.0",
+    "@types/color": "^3.0.1",
     "@types/hapi__joi": "16.0.8",
     "@types/lodash": "4.14.149",
     "@types/prop-types": "15.7.3",
