--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:loc:analyze": "cross-env-shell BUILD_ANALYZE=true bash ./scripts/build.loc.sh",
     "cm": "npx git-cz",
     "check:all": "run-p lint:fix types:check",
-    "clean:dist": "rm -rf dist/static",
+    "clean:dist": "rm -rf dist",
     "launch:loc": "run-p launch:dev-server types:watch",
     "launch:dev-server": "bash ./scripts/launch.dev-server.sh",
     "lint": "npx eslint src --config ./configs/eslint.config.js  --ext .ts,.tsx,.json --ignore-pattern '/node_modules/*' --ignore-pattern '**/*.d.ts' --ignore-pattern '**/*.spec.ts' --ignore-pattern '/src/assets/**'",
@@ -37,39 +37,40 @@
   "license": "MIT",
   "dependencies": {
     "@ciklum/logan": "0.4.10",
-    "@emotion/core": "10.0.27",
+    "@emotion/core": "10.0.28",
     "@emotion/styled": "10.0.27",
-    "@fortawesome/fontawesome-svg-core": "1.2.26",
-    "@fortawesome/free-brands-svg-icons": "5.12.0",
-    "@fortawesome/free-solid-svg-icons": "5.12.0",
-    "@fortawesome/react-fontawesome": "0.1.8",
+    "@fortawesome/fontawesome-svg-core": "1.2.27",
+    "@fortawesome/free-brands-svg-icons": "5.12.1",
+    "@fortawesome/free-solid-svg-icons": "5.12.1",
+    "@fortawesome/react-fontawesome": "0.1.9",
     "color": "3.1.2",
+    "deep-object-diff": "^1.1.0",
     "emotion-theming": "10.0.27",
-    "env-cmd": "10.0.1",
+    "env-cmd": "10.1.0",
     "moment": "2.24.0",
     "npm-run-all": "4.1.5",
     "prop-types": "15.7.2",
-    "typescript-plugin-css-modules": "2.1.2"
+    "typescript-plugin-css-modules": "2.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
     "@hapi/joi": "17.1.0",
     "@types/color": "^3.0.1",
-    "@types/hapi__joi": "16.0.8",
+    "@types/hapi__joi": "16.0.12",
     "@types/lodash": "4.14.149",
     "@types/prop-types": "15.7.3",
-    "@types/react": "16.9.19",
+    "@types/react": "16.9.23",
     "@types/react-dom": "16.9.5",
-    "@types/uuid": "3.4.7",
-    "@typescript-eslint/eslint-plugin": "2.18.0",
-    "@typescript-eslint/parser": "2.18.0",
+    "@types/uuid": "7.0.0",
+    "@typescript-eslint/eslint-plugin": "2.22.0",
+    "@typescript-eslint/parser": "2.22.0",
     "bootstrap": "4.4.1",
     "classnames": "2.2.6",
     "commitizen": "4.0.3",
     "compression-webpack-plugin": "3.1.0",
     "copy-webpack-plugin": "5.1.1",
-    "cross-env": "7.0.0",
+    "cross-env": "7.0.2",
     "css-loader": "3.4.2",
     "cssnano": "4.1.10",
     "cz-conventional-changelog": "3.1.0",
@@ -77,38 +78,38 @@
     "eslint-config-airbnb-base": "14.0.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-import-resolver-typescript": "2.0.0",
-    "eslint-plugin-import": "2.20.0",
-    "eslint-plugin-json": "2.0.1",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-json": "2.1.0",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-node": "11.0.0",
     "eslint-plugin-prettier": "3.1.2",
-    "eslint-plugin-react": "7.18.0",
-    "eslint-plugin-react-hooks": "2.3.0",
-    "file-loader": "5.0.2",
-    "handlebars": "4.7.2",
-    "husky": "4.2.1",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "2.5.0",
+    "file-loader": "5.1.0",
+    "handlebars": "4.7.3",
+    "husky": "4.2.3",
     "lodash": "4.17.15",
     "lodash-webpack-plugin": "0.11.5",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.7.0",
     "prettier": "1.19.1",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "rimraf": "3.0.1",
+    "react": "16.13.0",
+    "react-dom": "16.13.0",
+    "rimraf": "3.0.2",
     "source-map-loader": "0.2.4",
     "style-loader": "1.1.3",
     "sugarss": "2.0.0",
-    "svg-inline-loader": "0.8.0",
+    "svg-inline-loader": "0.8.2",
     "to-string-loader": "1.1.6",
     "ts-loader": "6.2.1",
     "tsconfig-paths-webpack-plugin": "3.2.0",
-    "typescript": "3.7.5",
+    "typescript": "3.8.3",
     "typings-for-css-modules-loader": "1.7.0",
-    "webpack": "4.41.5",
+    "webpack": "4.42.0",
     "webpack-bundle-analyzer": "3.6.0",
-    "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.10.1",
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "3.10.3",
     "webpack-merge": "4.2.2"
   },
   "engines": {
