--- a/configs/tsconfig.es3.json
+++ b/configs/tsconfig.es3.json
@@ -13,7 +13,6 @@
       "dom",
       "esnext"
     ],
-    "module": "ES2015",
     "moduleResolution": "node",
     "newLine": "lf",
     "noEmit": true,
@@ -27,7 +26,7 @@
     "sourceMap": true,
     "strict": true,
     "suppressImplicitAnyIndexErrors": true,
-    "target": "ES2015",
+    "target": "es3",
     "typeRoots": [
       "../node_modules/@types",
       "../src/typings"
