build(ie11): fix ie11 wip

--- a/configs/tsconfig.es20.json
+++ b/configs/tsconfig.es20.json
@@ -13,6 +13,7 @@
       "dom",
       "esnext"
     ],
+    "module": "esnext",
     "moduleResolution": "node",
     "newLine": "lf",
     "noEmit": true,
