--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.tsx",
   "scripts": {
     "prebuild": "npm run clean:dist",
+    "prebuild:loc": "npm run clean:dist",
     "build": "bash scripts/build.sh",
     "build:analyze": "cross-env-shell BUILD_ANALYZE=true bash ./scripts/build.sh",
     "build:loc": "bash scripts/build.loc.sh",
@@ -56,6 +57,7 @@
     "@commitlint/config-conventional": "8.3.4",
     "@hapi/joi": "17.1.0",
     "@types/color": "^3.0.1",
+    "@types/core-js": "2.5.3",
     "@types/hapi__joi": "16.0.12",
     "@types/lodash": "4.14.149",
     "@types/prop-types": "15.7.3",
@@ -69,6 +71,7 @@
     "commitizen": "4.0.3",
     "compression-webpack-plugin": "3.1.0",
     "copy-webpack-plugin": "5.1.1",
+    "core-js": "3.6.4",
     "cross-env": "7.0.2",
     "css-loader": "3.4.2",
     "cssnano": "4.1.10",
@@ -94,6 +97,7 @@
     "postcss-preset-env": "6.7.0",
     "prettier": "1.19.1",
     "react": "16.13.0",
+    "react-app-polyfill": "1.0.6",
     "react-dom": "16.13.0",
     "rimraf": "3.0.2",
     "source-map-loader": "0.2.4",
