build(added s3 sync delete):

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,7 +20,7 @@ phases:
   post_build:
     commands:
       - echo Sync /dist to S3 ...
-      - aws s3 sync ./dist $S3_BUCKET
+      - aws s3 sync ./dist $S3_BUCKET --delete
       - echo Schedulling CloudFront invalidation...
       - aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID --paths "/*"
 cache:
