chore(update deps after being afk 2y): wip

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     runtime-versions:
       nodejs: 12
     commands:
-      - echo Bootstraping build dependencies...
+      - echo Bootstrapping build dependencies...
       - npm i npm@latest -g
       - pip install --upgrade pip
       - pip install --upgrade awscli
@@ -21,7 +21,7 @@ phases:
     commands:
       - echo Sync /dist to S3 ...
       - aws s3 sync ./dist $S3_BUCKET --delete
-      - echo Schedulling CloudFront invalidation...
+      - echo Scheduling CloudFront invalidation...
       - aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID --paths "/*"
 cache:
   paths:
