--- a/package.json
+++ b/package.json
@@ -32,84 +32,84 @@
   "license": "MIT",
   "dependencies": {
     "@ciklum/logan": "0.4.10",
-    "@emotion/core": "10.0.28",
-    "@emotion/styled": "10.0.27",
-    "@fortawesome/fontawesome-svg-core": "1.2.27",
-    "@fortawesome/free-brands-svg-icons": "5.12.1",
-    "@fortawesome/free-solid-svg-icons": "5.12.1",
-    "@fortawesome/react-fontawesome": "0.1.9",
-    "color": "3.1.2",
-    "emotion-theming": "10.0.27",
+    "@emotion/core": "11.0.0",
+    "@emotion/styled": "11.8.1",
+    "@fortawesome/fontawesome-svg-core": "6.1.1",
+    "@fortawesome/free-brands-svg-icons": "6.1.1",
+    "@fortawesome/free-solid-svg-icons": "6.1.1",
+    "@fortawesome/react-fontawesome": "0.1.18",
+    "color": "4.2.3",
+    "emotion-theming": "11.0.0",
     "env-cmd": "10.1.0",
-    "moment": "2.24.0",
+    "moment": "2.29.2",
     "npm-run-all": "4.1.5",
-    "prop-types": "15.7.2",
-    "typescript-plugin-css-modules": "2.2.0"
+    "prop-types": "15.8.1",
+    "typescript-plugin-css-modules": "3.4.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "8.3.5",
-    "@commitlint/config-conventional": "8.3.4",
+    "@commitlint/cli": "16.2.3",
+    "@commitlint/config-conventional": "16.2.1",
     "@hapi/joi": "17.1.0",
-    "@types/color": "^3.0.1",
-    "@types/core-js": "2.5.3",
-    "@types/hapi__joi": "16.0.12",
-    "@types/lodash": "4.14.149",
-    "@types/prop-types": "15.7.3",
-    "@types/react": "16.9.23",
-    "@types/react-dom": "16.9.5",
-    "@types/uuid": "7.0.0",
-    "@typescript-eslint/eslint-plugin": "2.22.0",
-    "@typescript-eslint/parser": "2.22.0",
-    "bootstrap": "4.4.1",
-    "classnames": "2.2.6",
-    "commitizen": "4.0.3",
-    "compression-webpack-plugin": "3.1.0",
-    "copy-webpack-plugin": "5.1.1",
-    "core-js": "3.6.4",
-    "cross-env": "7.0.2",
-    "css-loader": "3.4.2",
-    "cssnano": "4.1.10",
-    "cz-conventional-changelog": "3.1.0",
-    "eslint": "6.8.0",
-    "eslint-config-airbnb-base": "14.0.0",
-    "eslint-config-prettier": "6.10.0",
-    "eslint-import-resolver-typescript": "2.0.0",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-json": "2.1.0",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-node": "11.0.0",
-    "eslint-plugin-prettier": "3.1.2",
-    "eslint-plugin-react": "7.19.0",
-    "eslint-plugin-react-hooks": "2.5.0",
-    "file-loader": "5.1.0",
-    "handlebars": "4.7.3",
-    "husky": "4.2.3",
-    "lodash": "4.17.15",
-    "lodash-webpack-plugin": "0.11.5",
-    "postcss-import": "12.0.1",
-    "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.7.0",
-    "prettier": "1.19.1",
-    "react": "16.13.0",
-    "react-app-polyfill": "1.0.6",
-    "react-dom": "16.13.0",
+    "@types/color": "^3.0.3",
+    "@types/core-js": "2.5.5",
+    "@types/hapi__joi": "17.1.8",
+    "@types/lodash": "4.14.181",
+    "@types/prop-types": "15.7.5",
+    "@types/react": "18.0.5",
+    "@types/react-dom": "18.0.1",
+    "@types/uuid": "8.3.4",
+    "@typescript-eslint/eslint-plugin": "5.19.0",
+    "@typescript-eslint/parser": "5.19.0",
+    "bootstrap": "5.1.3",
+    "classnames": "2.3.1",
+    "commitizen": "4.2.4",
+    "compression-webpack-plugin": "9.2.0",
+    "copy-webpack-plugin": "10.2.4",
+    "core-js": "3.22.0",
+    "cross-env": "7.0.3",
+    "css-loader": "6.7.1",
+    "cssnano": "5.1.7",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "8.13.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-typescript": "2.7.1",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-json": "3.1.0",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.4.0",
+    "file-loader": "6.2.0",
+    "handlebars": "4.7.7",
+    "husky": "7.0.4",
+    "lodash": "4.17.21",
+    "lodash-webpack-plugin": "0.11.6",
+    "postcss-import": "14.1.0",
+    "postcss-loader": "6.2.1",
+    "postcss-preset-env": "7.4.3",
+    "prettier": "2.6.2",
+    "react": "18.0.0",
+    "react-app-polyfill": "3.0.0",
+    "react-dom": "18.0.0",
     "rimraf": "3.0.2",
-    "source-map-loader": "0.2.4",
-    "style-loader": "1.1.3",
-    "sugarss": "2.0.0",
+    "source-map-loader": "3.0.1",
+    "style-loader": "3.3.1",
+    "sugarss": "4.0.1",
     "svg-inline-loader": "0.8.2",
-    "to-string-loader": "1.1.6",
-    "ts-loader": "6.2.1",
-    "tsconfig-paths-webpack-plugin": "3.2.0",
-    "typescript": "3.8.3",
+    "to-string-loader": "1.2.0",
+    "ts-loader": "9.2.8",
+    "tsconfig-paths-webpack-plugin": "3.5.2",
+    "typescript": "4.6.3",
     "typings-for-css-modules-loader": "1.7.0",
-    "webpack": "4.42.0",
-    "webpack-bundle-analyzer": "3.6.0",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.10.3",
-    "webpack-merge": "4.2.2"
+    "webpack": "5.72.0",
+    "webpack-bundle-analyzer": "4.5.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.8.1",
+    "webpack-merge": "5.8.0"
   },
   "engines": {
-    "node": "12"
+    "node": "~16"
   }
 }
