--- a/package.json
+++ b/package.json
@@ -33,83 +33,83 @@
   "dependencies": {
     "@ciklum/logan": "0.4.10",
     "@emotion/core": "11.0.0",
-    "@emotion/styled": "11.11.0",
-    "@fortawesome/fontawesome-svg-core": "6.4.0",
-    "@fortawesome/free-brands-svg-icons": "6.4.0",
-    "@fortawesome/free-solid-svg-icons": "6.4.0",
-    "@fortawesome/react-fontawesome": "0.2.0",
+    "@emotion/styled": "11.8.1",
+    "@fortawesome/fontawesome-svg-core": "6.1.1",
+    "@fortawesome/free-brands-svg-icons": "6.1.1",
+    "@fortawesome/free-solid-svg-icons": "6.1.1",
+    "@fortawesome/react-fontawesome": "0.1.18",
     "color": "4.2.3",
     "emotion-theming": "11.0.0",
     "env-cmd": "10.1.0",
-    "moment": "2.29.4",
+    "moment": "2.29.2",
     "npm-run-all": "4.1.5",
     "prop-types": "15.8.1",
-    "typescript-plugin-css-modules": "5.0.1"
+    "typescript-plugin-css-modules": "3.4.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "17.6.3",
-    "@commitlint/config-conventional": "17.6.3",
+    "@commitlint/cli": "16.2.3",
+    "@commitlint/config-conventional": "16.2.1",
     "@hapi/joi": "17.1.0",
     "@types/color": "^3.0.3",
     "@types/core-js": "2.5.5",
-    "@types/hapi__joi": "17.1.9",
-    "@types/lodash": "4.14.194",
+    "@types/hapi__joi": "17.1.8",
+    "@types/lodash": "4.14.181",
     "@types/prop-types": "15.7.5",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "@types/uuid": "9.0.1",
-    "@typescript-eslint/eslint-plugin": "5.59.7",
-    "@typescript-eslint/parser": "5.59.7",
-    "bootstrap": "5.2.3",
-    "classnames": "2.3.2",
-    "commitizen": "4.3.0",
-    "compression-webpack-plugin": "10.0.0",
-    "copy-webpack-plugin": "11.0.0",
-    "core-js": "3.30.2",
+    "@types/react": "18.0.5",
+    "@types/react-dom": "18.0.1",
+    "@types/uuid": "8.3.4",
+    "@typescript-eslint/eslint-plugin": "5.19.0",
+    "@typescript-eslint/parser": "5.19.0",
+    "bootstrap": "5.1.3",
+    "classnames": "2.3.1",
+    "commitizen": "4.2.4",
+    "compression-webpack-plugin": "9.2.0",
+    "copy-webpack-plugin": "10.2.4",
+    "core-js": "3.22.0",
     "cross-env": "7.0.3",
-    "css-loader": "6.7.4",
-    "cssnano": "6.0.1",
+    "css-loader": "6.7.1",
+    "cssnano": "5.1.7",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "8.41.0",
+    "eslint": "8.13.0",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-import-resolver-typescript": "3.5.5",
-    "eslint-plugin-import": "2.27.5",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-typescript": "2.7.1",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-json": "3.1.0",
-    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.4.0",
     "file-loader": "6.2.0",
     "handlebars": "4.7.7",
-    "husky": "8.0.3",
+    "husky": "7.0.4",
     "lodash": "4.17.21",
     "lodash-webpack-plugin": "0.11.6",
-    "postcss-import": "15.1.0",
-    "postcss-loader": "7.3.0",
-    "postcss-preset-env": "8.4.1",
-    "prettier": "2.8.8",
-    "react": "18.2.0",
+    "postcss-import": "14.1.0",
+    "postcss-loader": "6.2.1",
+    "postcss-preset-env": "7.4.3",
+    "prettier": "2.6.2",
+    "react": "18.0.0",
     "react-app-polyfill": "3.0.0",
-    "react-dom": "18.2.0",
-    "rimraf": "5.0.1",
-    "source-map-loader": "4.0.1",
-    "style-loader": "3.3.3",
+    "react-dom": "18.0.0",
+    "rimraf": "3.0.2",
+    "source-map-loader": "3.0.1",
+    "style-loader": "3.3.1",
     "sugarss": "4.0.1",
     "svg-inline-loader": "0.8.2",
     "to-string-loader": "1.2.0",
-    "ts-loader": "9.4.3",
-    "tsconfig-paths-webpack-plugin": "4.0.1",
-    "typescript": "5.0.4",
-    "typings-for-css-modules-loader": "^0.1.1",
-    "webpack": "5.83.1",
-    "webpack-bundle-analyzer": "4.8.0",
-    "webpack-cli": "5.1.1",
-    "webpack-dev-server": "4.15.0",
-    "webpack-merge": "5.9.0"
+    "ts-loader": "9.2.8",
+    "tsconfig-paths-webpack-plugin": "3.5.2",
+    "typescript": "4.6.3",
+    "typings-for-css-modules-loader": "1.7.0",
+    "webpack": "5.72.0",
+    "webpack-bundle-analyzer": "4.5.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.8.1",
+    "webpack-merge": "5.8.0"
   },
   "engines": {
-    "node": "^20"
+    "node": "~16"
   }
 }
