--- a/configs/tsconfig.es2016.json
+++ b/configs/tsconfig.es2016.json
@@ -11,14 +11,13 @@
     "jsx": "react",
     "lib": [
       "dom",
-      "esnext"
+      "es2016"
     ],
-    "module": "esnext",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "newLine": "lf",
     "noEmit": true,
     "noImplicitAny": true,
-    "noStrictGenericChecks": true,
     "paths": {
       "src/*": [ "src/*" ]
     },
@@ -26,8 +25,7 @@
     "removeComments": true,
     "sourceMap": true,
     "strict": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "target": "ES2020",
+    "target": "ES2016",
     "typeRoots": [
       "../node_modules/@types",
       "../src/typings"
@@ -37,7 +35,6 @@
     "../src/**/*"
   ],
   "exclude": [
-    "../node_modules",
     "../configs",
     "../dist",
     "../docs",
