--- a/package.json
+++ b/package.json
@@ -32,14 +32,13 @@
   "license": "MIT",
   "dependencies": {
     "@ciklum/logan": "0.4.10",
-    "@emotion/core": "11.0.0",
+    "@emotion/react": "11.11.0",
     "@emotion/styled": "11.11.0",
     "@fortawesome/fontawesome-svg-core": "6.4.0",
     "@fortawesome/free-brands-svg-icons": "6.4.0",
     "@fortawesome/free-solid-svg-icons": "6.4.0",
     "@fortawesome/react-fontawesome": "0.2.0",
     "color": "4.2.3",
-    "emotion-theming": "11.0.0",
     "env-cmd": "10.1.0",
     "moment": "2.29.4",
     "npm-run-all": "4.1.5",
@@ -55,7 +54,7 @@
     "@types/hapi__joi": "17.1.9",
     "@types/lodash": "4.14.194",
     "@types/prop-types": "15.7.5",
-    "@types/react": "18.2.6",
+    "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "@types/uuid": "9.0.1",
     "@typescript-eslint/eslint-plugin": "5.59.7",
@@ -103,7 +102,7 @@
     "tsconfig-paths-webpack-plugin": "4.0.1",
     "typescript": "5.0.4",
     "typings-for-css-modules-loader": "^0.1.1",
-    "webpack": "5.83.1",
+    "webpack": "5.84.0",
     "webpack-bundle-analyzer": "4.8.0",
     "webpack-cli": "5.1.1",
     "webpack-dev-server": "4.15.0",
