refactor: updated font sizes and sizing
* reduced priority of twbp styling

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "check:all": "run-p lint:fix types:check",
     "launch:loc": "run-p launch:dev-server types:watch",
     "launch:dev-server": "make launch-dev-server",
-    "lint": "npx eslint src --config ./configs/eslint.config.js  --ext .ts,.tsx,.json --ignore-pattern '/node_modules/*' --ignore-pattern '**/*.d.ts' --ignore-pattern '**/*.spec.ts' --ignore-pattern '/src/assets/**'",
+    "lint": "npx eslint src --config eslint.config.js  --ext .ts,.tsx,.json --ignore-pattern '/node_modules/*' --ignore-pattern '**/*.d.ts' --ignore-pattern '**/*.spec.ts' --ignore-pattern '/src/assets/**'",
     "lint:fix": "npm run lint -- --fix",
     "start": "npm run launch:loc",
     "types:check": "tsc -p tsconfig.json",
@@ -49,7 +49,7 @@
     "@types/color": "^3.0.3",
     "@types/core-js": "2.5.5",
     "@types/hapi__joi": "17.1.9",
-    "@types/lodash": "4.14.194",
+    "@types/lodash": "4.14.195",
     "@types/prop-types": "15.7.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -63,7 +63,7 @@
     "copy-webpack-plugin": "11.0.0",
     "core-js": "3.30.2",
     "cross-env": "7.0.3",
-    "css-loader": "6.7.4",
+    "css-loader": "6.8.1",
     "cssnano": "6.0.1",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.41.0",
@@ -83,7 +83,7 @@
     "lodash": "4.17.21",
     "lodash-webpack-plugin": "0.11.6",
     "postcss-import": "15.1.0",
-    "postcss-loader": "7.3.0",
+    "postcss-loader": "7.3.2",
     "postcss-preset-env": "8.4.1",
     "prettier": "2.8.8",
     "react": "18.2.0",
@@ -99,7 +99,7 @@
     "tsconfig-paths-webpack-plugin": "4.0.1",
     "typescript": "5.0.4",
     "typings-for-css-modules-loader": "^0.1.1",
-    "webpack": "5.84.0",
+    "webpack": "5.84.1",
     "webpack-bundle-analyzer": "4.8.0",
     "webpack-cli": "5.1.1",
     "webpack-dev-server": "4.15.0",
