--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 18.x
+      nodejs: 18
     commands:
       - echo Bootstrapping build dependencies...
       - npm i npm@latest -g
@@ -23,7 +23,7 @@ phases:
       - aws s3 sync ./dist $S3_BUCKET --delete
       - echo Scheduling CloudFront invalidation...
       - aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID --paths "/*"
-image: aws/codebuild/amazonlinux2-x86_64-standard:5.0
+image: aws/codebuild/standard:5.0
 cache:
   paths:
     - './node_modules/**/*'
